fixed spacing issue

--- a/css/style.css
+++ b/css/style.css
@@ -255,6 +255,7 @@ section {
 
 #rightSide {
   margin-left: 200px;
+  width: 700px;
 }
 
 h1 {
